--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -39,7 +39,6 @@
             <LinearLayout
                 android:layout_width="280dp"
                 android:layout_height="wrap_content"
-                android:layout_orientation="horizontal"
                 android:layout_marginTop="50dp"
                 android:layout_gravity="center">
                 <EditText
@@ -63,7 +62,9 @@
                     android:textStyle="bold"
                     android:background="@color/colorWarning"
                     android:text="check duplication"
-                    android:textColor="#ffffff"/>
+                    android:textColor="#ffffff"
+                    android:layout_gravity="center"
+                    android:id="@+id/validateButton"/>
             </LinearLayout>
 
 
