--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -78,7 +78,8 @@
                 android:background="@color/colorPrimaryDark"
                 android:text="Login"
                 android:layout_gravity="center"
-                android:layout_marginTop="10dp"/>
+                android:layout_marginTop="10dp"
+                android:id="@+id/loginButton"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
