--- a/app/src/main/res/layout/mainactivity.xml
+++ b/app/src/main/res/layout/mainactivity.xml
@@ -1,77 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".LoginActivity">
-
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:orientation="vertical">
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:id="@+id/alarm_title"
+            android:layout_marginLeft="72dp"
+            android:textSize ="25dp"
+            android:textStyle="bold"
+            android:textColor="#ffffffff"
+            android:hint="Set Alarm"
+            android:lines="1"
+            android:textColorHint="#ffffffff"/>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="225dp"
-            android:background="@color/colorPrimary"
+            android:layout_height="500dp"
+            android:background="@color/colorPrimaryDark"
             android:orientation="vertical">
-
-            <ImageView
-                android:layout_width="125dp"
-                android:layout_height="125dp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginTop="50dp"
-                android:src="@drawable/ic_local_hospital_black_24dp" />
-
-            <TextView
-                android:id="@+id/time"
-                android:layout_width="wrap_content"
+            <TimePicker
+                android:id="@+id/timePicker"
+                android:layout_marginTop="20dp"
+                android:layout_width="300dp"
+                android:layout_height="350dp"
+                android:layout_gravity="center"></TimePicker>
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:layout_marginRight="10dp"
                 android:gravity="center_horizontal"
-                android:padding="10dp"
-                android:text="Date"
-                android:textColor="#FFFFFFFF"
-                android:textColorHint="#ffffff"
-                android:textSize="30dp" />
+                android:layout_marginTop="20dp">
+                <Button
+                    android:id="@+id/setButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Set" />
+                <Button
+                    android:id="@+id/cancelButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Cancel" />
+            </LinearLayout>
 
-            <TextView
-                android:id="@+id/dateNow"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textColor="#FFFFFFFF" />
         </LinearLayout>
-
-        <ListView
-            android:id="@+id/list"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-        </ListView>
-
     </LinearLayout>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="50dp"
-        android:layout_height="42dp"
-        android:layout_alignParentBottom="true"
-        android:layout_margin="16dp"
-        android:layout_marginEnd="28dp"
-        android:layout_marginRight="28dp"
-        android:layout_marginBottom="28dp"
-        android:clickable="true"
-        android:src="@drawable/ic_exposure_plus_1_black_24dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+    <LinearLayout
+        android:layout_marginTop="140dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimaryDark">
+        <ScrollView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
+        </ScrollView>
+
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
