--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -40,19 +40,20 @@
                 android:layout_width="280dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="50dp"
-                android:layout_gravity="center">
+                android:layout_gravity="center"
+                android:orientation="horizontal"
+                android:gravity="center">
                 <EditText
-                    android:inputType="textPassword"
                     android:layout_width="190dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:hint="PW"
+                    android:hint="ID"
                     android:padding="10dp"
                     android:textColor="#ffffff"
                     android:textColorHint="#ffffff"
-                    android:id="@+id/passwordText"
-                    android:drawableStart="@drawable/ic_lock_outline_black_24dp"
-                    android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
+                    android:id="@+id/idText"
+                    android:drawableStart="@drawable/ic_email_black_24dp"
+                    android:drawableLeft="@drawable/ic_email_black_24dp"
                     android:layout_marginRight="10dp"
                     android:background="@color/colorPrimary"/>
                 <Button
@@ -67,6 +68,19 @@
                     android:id="@+id/validateButton"/>
             </LinearLayout>
 
+            <EditText
+                android:layout_width="280dp"
+                android:layout_height="wrap_content"
+                android:hint="PW"
+                android:layout_gravity="center"
+                android:padding="10dp"
+                android:textColor="#ffffff"
+                android:textColorHint="#ffffff"
+                android:id="@+id/passwordText"
+                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
+                android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
+                android:layout_marginTop="10dp"
+                android:background="@color/colorPrimary"/>
 
             <EditText
                 android:layout_width="280dp"
