--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity">
+    tools:context=".Login">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -80,14 +80,6 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="10dp"
                 android:id="@+id/loginButton"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:textSize="18dp"
-                android:layout_marginTop="10dp"
-                android:text="Sign Up"
-                android:id="@+id/registerButton"/>
         </LinearLayout>
     </LinearLayout>
 
