--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegisterActivity">
+    tools:context=".Register">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -44,7 +44,7 @@
                 android:orientation="horizontal"
                 android:gravity="center">
                 <EditText
-                    android:layout_width="190dp"
+                    android:layout_width="280dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:hint="ID"
@@ -56,16 +56,6 @@
                     android:drawableLeft="@drawable/ic_email_black_24dp"
                     android:layout_marginRight="10dp"
                     android:background="@color/colorPrimary"/>
-                <Button
-                    android:layout_width="80dp"
-                    android:layout_height="40dp"
-                    android:textSize="15dp"
-                    android:textStyle="bold"
-                    android:background="@color/colorWarning"
-                    android:text="check duplication"
-                    android:textColor="#ffffff"
-                    android:layout_gravity="center"
-                    android:id="@+id/validateButton"/>
             </LinearLayout>
 
             <EditText
@@ -95,27 +85,6 @@
                 android:drawableLeft="@drawable/ic_email_black_24dp"
                 android:layout_marginTop="10dp"
                 android:background="@color/colorPrimary"/>
-            <RadioGroup
-                android:layout_width="280dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/genderGroup"
-                android:layout_gravity="center"
-                android:orientation="horizontal"
-                android:layout_marginTop="10dp">
-                <RadioButton
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:text="Female"
-                    android:id="@+id/genderWoman"
-                    android:layout_weight="1"
-                    android:checked="true"/>
-                <RadioButton
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:text="Male"
-                    android:id="@+id/genderMan"
-                    android:layout_weight="1"/>
-            </RadioGroup>
             <Spinner
                 android:layout_width="280dp"
                 android:layout_height="wrap_content"
@@ -133,6 +102,15 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="10dp"
                 android:id="@+id/registerButton"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textSize="18dp"
+                android:layout_marginTop="10dp"
+                android:text="Log in"
+                android:id="@+id/loginButton"/>
+
         </LinearLayout>
     </LinearLayout>
 
