--- a/app/src/main/res/layout/mainactivity.xml
+++ b/app/src/main/res/layout/mainactivity.xml
@@ -35,19 +35,26 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
-                android:layout_marginTop="20dp">
+                android:layout_marginTop="5dp">
                 <Button
-                    android:id="@+id/setButton"
+                    android:id="@+id/setAlarm"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:onClick="setTimer"
                     android:text="Set" />
-                <Button
-                    android:id="@+id/cancelButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Cancel" />
-            </LinearLayout>
 
+
+            </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Did you set the alarm?"
+                android:textColor="#ffffff"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                android:id="@+id/alarmtext"/>
         </LinearLayout>
     </LinearLayout>
 
